--- a/extension/manifest.chrome.json
+++ b/extension/manifest.chrome.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "Umbraco DevTools",
-    "description": "A browser extension to help with debugging the Webcomponent based Umbraco backoffice V13+",
+    "name": "DevTools for Umbraco",
+    "description": "A browser extension to help with debugging the Webcomponent based Umbraco backoffice V14+ codenamed Bellissima",
     "version": "0.0.1",    
     "icons": {
         "16": "icons/icon-16.png",
