--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,8 @@
 {
     "manifest_version": 3,
-    "name": "Umbraco DevTools",
-    "description": "A browser extension to help with debugging the Webcomponent based Umbraco backoffice V13+",
-    "version": "0.0.1",
-    "browser_specific_settings": {
-        "gecko": {
-            "id": "umbraco.devtools@warrenbuckley.co.uk"
-        }
-    },
+    "name": "DevTools for Umbraco",
+    "description": "A browser extension to help with debugging the Webcomponent based Umbraco backoffice V14+ codenamed Bellissima",
+    "version": "0.0.1",    
     "icons": {
         "16": "icons/icon-16.png",
         "48": "icons/icon-48.png",
@@ -25,7 +20,7 @@
     },
     "devtools_page": "devtools-registration.html",
     "background": {
-        "scripts": ["background.js"]
+        "service_worker": "background.js"
     },
     "permissions": [
         "activeTab"
